--- a/install_nginx.yml
+++ b/install_nginx.yml
@@ -1,16 +1,14 @@
 ---
-- name: Install Nginx on all servers
+- name: Install Nginx
   hosts: all
   become: yes
+ 
   tasks:
+    - name: Update apt package cache
+      apt:
+        update_cache: yes
+ 
     - name: Install Nginx
       apt:
         name: nginx
         state: present
-        update_cache: yes
-
-    - name: Start Nginx
-      service:
-        name: nginx
-        state: started
-        enabled: yes
