--- a/install_nginx.yml
+++ b/install_nginx.yml
@@ -2,6 +2,9 @@
 - name: Install Nginx
   hosts: all
   become: yes
+  vars:
+    ansible_ssh_user: sagarika
+    ansible_ssh_private_key_file: /var/lib/jenkins/id_rsa
  
   tasks:
     - name: Update apt package cache
